force-app/main/default/objects/user_master__c/user_master__c.object-meta.xml
<CustomObject>
    <label>user master</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>user_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>user masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>