force-app/main/default/objects/user_master__c/fields/fname__c.field-meta.xml
<CustomField>
    <fullName>fname__c</fullName>
    <label>fname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>