force-app/main/default/objects/user_master__c/fields/lname__c.field-meta.xml
<CustomField>
    <fullName>lname__c</fullName>
    <label>lname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>