force-app/main/default/objects/user_master__c/fields/pass__c.field-meta.xml
<CustomField>
    <fullName>pass__c</fullName>
    <label>pass</label>
    <length>50</length>
    <type>Text</type>
</CustomField>