force-app/main/default/objects/user_master__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>